# Proyecto_Juego

./: README.md
juego/: CMakeLists.txt  Personaje.cpp  Personaje.hpp  asteroide.cpp  asteroide.hpp  colision.cpp  colision.hpp  cometa.cpp  cometa.hpp  disparo.cpp  disparo.hpp  fondo.cpp  fondo.hpp  main.cpp  objeto.cpp  objeto.hpp  pantalla_inicio.cpp  pantalla_inicio.hpp
juego/fuente/: readme.txt
